--- a/css/main.css
+++ b/css/main.css
@@ -4,13 +4,19 @@ body {
 }
 nav ul, footer ul {
     font-family:'Helvetica', 'Arial', 'Sans-Serif';
-    padding: 0px;
+    padding: 10px;
     list-style: none;
     font-weight: bold;
+    background-origin: padding-box;
+    background-color: darkcyan;
 }
 nav ul li, footer ul li {
     display: inline;
     margin-right: 20px;
+}
+.intro {
+    font-size: 1.5em;
+    font-family: Helvetica, Arial, sans-serif;
 }
 a {
     text-decoration: none;
@@ -19,7 +25,7 @@ a {
 a:hover {
     text-decoration: underline;
 }
-h1 {
+h2 {
     font-size: 2.5em;
     font-family:'Helvetica', 'Arial', 'Sans-Serif';
 }
@@ -30,7 +36,7 @@ p {
 }
 footer {
     border-top: 1px solid #d5d5d5;
-    font-size: .3em;
+    font-size: .4em;
 }
 
 ul.posts { 
