--- a/css/main.css
+++ b/css/main.css
@@ -9,13 +9,14 @@ nav ul, footer ul {
     font-weight: bold;
     background-origin: padding-box;
     background-color: darkcyan;
+    border: 5px  dodgerblue;
 }
 nav ul li, footer ul li {
     display: inline;
     margin-right: 20px;
 }
 .intro {
-    font-size: 1.5em;
+    font-size: 1em;
     font-family: Helvetica, Arial, sans-serif;
 }
 a {
