--- a/css/main.css
+++ b/css/main.css
@@ -1,5 +1,5 @@
 body {
-    margin: 20px auto;
+    margin: 5px auto;
     width: 90%;
 }
 nav ul, footer ul {
@@ -21,7 +21,7 @@ nav ul li, footer ul li {
 }
 a {
     text-decoration: none;
-    color: #999;
+    color: #fff;
 }
 a:hover {
     text-decoration: underline;
@@ -31,8 +31,8 @@ h2 {
     font-family:'Helvetica', 'Arial', 'Sans-Serif';
 }
 p {
-    font-size: 1.5em;
-    line-height: 1.4em;
+    font-size: 1em;
+    line-height: 1em;
     color: #333;
 }
 footer {
